--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<marquee direction="left">Welcome to Accio Jobs!</marquee>
+<marquee><h1>Welcome to Accio Jobs!</marquee>
+	<a href=""><h1>Blog</h1></a>
+	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
 </body>
 
 </html>
