--- a/main.html
+++ b/main.html
@@ -13,6 +13,8 @@
 <marquee><h1>Welcome to Accio Jobs!</marquee>
 	<a href=""><h1>Blog</h1></a>
 	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
+	<a href=""><u><h4>Brute Force vs. Optimization</h4></u></a>
+	<a href=""><p>We can say that optimization is one step farther than the brute-force method of problem solving....</p></a>
 </body>
 
 </html>
