--- a/main.html
+++ b/main.html
@@ -15,6 +15,15 @@
 	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
 	<a href=""><u><h4>Brute Force vs. Optimization</h4></u></a>
 	<a href=""><p>We can say that optimization is one step farther than the brute-force method of problem solving....</p></a>
+
+	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
+	<a href=""><u><h4>DSA vs. Competitive Programming</h4></u></a>
+	<a href=""><p>DSA or Competitive programming? What is better for you? Questions such as these often put you in a....</p></a>
+
+	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
+	<a href=""><u><h4>Brute Force vs. Optimization</h4></u></a>
+	<a href=""><p>We can say that optimization is one step farther than the brute-force method of problem solving....</p></a>
+</body>
 </body>
 
 </html>
