--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 	<a href=""><h1>Blog</h1></a>
 	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
 	<a href=""><h4>Brute Force vs. Optimization</h4></a>
+	<p style="color:blue"><u>We can say that...</u></p>
 </body>
 
 </html>
