--- a/main.html
+++ b/main.html
@@ -14,15 +14,15 @@
 	<a href=""><h1>Blog</h1></a>
 	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
 	<a href=""><h4>Brute Force vs. Optimization</h4></a>
-	<p style="color:blue"><u>We can say that...</u></p>
+	<p style="color:blue"><u>We can say that optimization is...</u></p>
 
 	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
-	<a href=""><h4>Brute Force vs. Optimization</h4></a>
-	<p style="color:blue"><u>We can say that...</u></p>
+	<a href=""><h4>DSA vs. Competitive Programming</h4></a>
+	<p style="color:blue"><u>DSA or Competitive programming?...</u></p>
 
 	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
-	<a href=""><h4>Brute Force vs. Optimization</h4></a>
-	<p style="color:blue"><u>We can say that...</u></p>
+	<a href=""><h4>Complete Guide on FlexBox</h4></a>
+	<p style="color:blue"><u>As a job seeker, you may wonder...</u></p>
 </body>
 
 </html>
