--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<a href=""><h4>Brute Force vs. Optimization</h4></a>
 	<p style="color:blue"><u>We can say that optimization is...</u></p>
 
-	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
+	<img src="https://media.istockphoto.com/id/1356364268/photo/close-up-focus-on-persons-hands-typing-on-the-desktop-computer-keyboard-screens-show-coding.jpg?s=612x612&w=0&k=20&c=4R_9mWq9KzgpC_pVBMMM0FNzw1L-NyFLa7tDqFInMGs=" width="150px" height="100px">
 	<a href=""><h4>DSA vs. Competitive Programming</h4></a>
 	<p style="color:blue"><u>DSA or Competitive programming?...</u></p>
 
