--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 	<a href=""><h4>DSA vs. Competitive Programming</h4></a>
 	<p style="color:blue"><u>DSA or Competitive programming?...</u></p>
 
-	<img src="https://media.istockphoto.com/id/1014763748/photo/atom-on-abstract-background.jpg?s=2048x2048&w=is&k=20&c=wK7o0ENmhKtSzCWpD_VIUC9SImNK-O-hYKoH7TOOzuI=" width="150px" height="100px">
+	<img src="https://media.istockphoto.com/id/1152834917/photo/physical-therapist-checks-the-patient-wrist-by-pressing-the-wrist-bone-in-clinic-room.jpg?s=612x612&w=0&k=20&c=TYxp7TQUrPUkdnZMXRfr3QmLlAeznMnXeWzF1Mefjbw=" width="150px" height="100px">
 	<a href=""><h4>Complete Guide on FlexBox</h4></a>
 	<p style="color:blue"><u>As a job seeker, you may wonder...</u></p>
 </body>
