--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 <marquee><h1>Welcome to Accio Jobs!</marquee>
 	<a href=""><h1>Blog</h1></a>
-	<img src="https://acciojob.com/blog/brute-force-vs-optimization/" width="150px" height="200px">
+	<img src="https://media.istockphoto.com/id/680412874/photo/atomic-molecule-on-blackboard.jpg?s=612x612&w=0&k=20&c=t8ncQWTsYGKzexLb929lV9HiN7jvAxjgZnUHulckBA8=" width="150px" height="200px">
 	<a href=""><h4>Brute Force vs. Optimization</h4></a>
 	<p style="color:blue"><u>We can say that optimization is...</u></p>
 
