--- a/main.html
+++ b/main.html
@@ -13,15 +13,15 @@
 <marquee><h1>Welcome to Accio Jobs!</marquee>
 	<a href=""><h1>Blog</h1></a>
 	<img src="https://media.istockphoto.com/id/680412874/photo/atomic-molecule-on-blackboard.jpg?s=612x612&w=0&k=20&c=t8ncQWTsYGKzexLb929lV9HiN7jvAxjgZnUHulckBA8=" width="150px" height="200px">
-	<a href=""><h4>Brute Force vs. Optimization</h4></a>
+	<a href="https://acciojob.com/blog/brute-force-vs-optimization/"><h4>Brute Force vs. Optimization</h4></a>
 	<p style="color:blue"><u>We can say that optimization is...</u></p>
 
 	<img src="https://media.istockphoto.com/id/1356364268/photo/close-up-focus-on-persons-hands-typing-on-the-desktop-computer-keyboard-screens-show-coding.jpg?s=612x612&w=0&k=20&c=4R_9mWq9KzgpC_pVBMMM0FNzw1L-NyFLa7tDqFInMGs=" width="150px" height="200px">
-	<a href=""><h4>DSA vs. Competitive Programming</h4></a>
+	<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/"><h4>DSA vs. Competitive Programming</h4></a>
 	<p style="color:blue"><u>DSA or Competitive programming?...</u></p>
 
 	<img src="https://media.istockphoto.com/id/1152834917/photo/physical-therapist-checks-the-patient-wrist-by-pressing-the-wrist-bone-in-clinic-room.jpg?s=612x612&w=0&k=20&c=TYxp7TQUrPUkdnZMXRfr3QmLlAeznMnXeWzF1Mefjbw=" width="150px" height="200px">
-	<a href=""><h4>Complete Guide on FlexBox</h4></a>
+	<a href="https://acciojob.com/blog/untitled-19/"><h4>Complete Guide on FlexBox</h4></a>
 	<p style="color:blue"><u>As a job seeker, you may wonder...</u></p>
 </body>
 
